src/main/java/com/example/javaproject/global/error/exception/CustomException.java
package com.example.javaproject.global.error.exception;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}
